--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body {
   margin: 0;
   box-sizing: border-box;
   min-height: 100vh;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 150px 1fr 60px;
+  grid-template-areas: 
+  'header header'
+  'nav  main'
+  'footer  footer';
+
 }
 
 .header {
@@ -19,6 +27,7 @@ body {
   display: grid;
   align-items: center;
   justify-items: center;
+  grid-area: header;
 }
 
 .header__title {
@@ -35,6 +44,8 @@ body {
   min-width: 200px;
   justify-items: center;
   padding: 12px 0 24px;
+  grid-area: nav;
+  margin: 20px;
 }
 
 .nav__link, .nav__link--active {
@@ -57,6 +68,14 @@ body {
   padding: 0 70px;
 }
 
+.img_card__container {
+  display: grid;
+  grid-area: main;
+  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  grid-auto-rows: 350px;
+  margin-top: 20px;
+}
+
 .img_card {
   width: 300px;
   box-shadow: var(--gray) 4px 4px 10px 2px;
@@ -76,9 +95,42 @@ body {
   display: grid;
   align-items: center;
   justify-items: center;
+  grid-area: footer;
 }
 
 @media screen and (max-width: 1100px) {
+  body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 150px 100px 1fr 60px;
+  justify-items: center;
+  grid-template-areas: 
+  'header'
+  'nav'
+  'main'
+  'footer';
+  }
+
+  .header {
+    display: grid;
+    grid-area: header;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  .nav_container {
+    display: grid;
+    grid-area: nav;
+  }
+  .img_card__container {
+    display: grid;
+    grid-area: main;
+    justify-items: center;
+    width: 768;
+  }
+  .footer {
+    display: grid;
+    grid-area: footer;
+  }
   .header__title {
     font-size: 2rem;
   }
